# birdears

./: .cirrus.yml  .codeclimate.yml  .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .wercker.yml  AUTHORS.rst  CHANGELOG  CONTRIBUTING.md  CONTRIBUTING.pyscaffold-ori.md  CONTRIBUTING.rst  EXPLANATION.md  ISSUE_TEMPLATE.md  LICENSE.txt  README.md  README.md.backup  README.rst  TODO.md  WRITE-ME-method.md  WRITE-ME-method.md.backup  birdears.py  birdears.python3  build.sh  ex-MANIFEST.in  ex-build.sh  ex-requirements.txt  ex-travis.yml  pyfet.python3  pyproject.toml  pytest.ini  release.sh  requirements.txt  setup.cfg  setup.py  tox.ini  wids.py
.github/workflows/: main.yml
birdears/: __init__.py  __main__.py  exception.py  harmonicintervalquestion.py  interval.py  logger.py  melodicdictationquestion.py  melodicintervalquestion.py  note.py  note_and_pitch.py  pitch.py  prequestion.py  questionbase.py  resolution.py  scale.py  sequence.py  utils.py
birdears/interfaces/: __init__.py  commandline.py  urwid.py
birdears/questions/: __init__.py  harmonicinterval.py  instrumentaldictation.py  melodicdictation.py  melodicinterval.py  notename.py
birdears/urwid/: __init__.py  canvas.py  decoration.py  escape.py  font.py  html_fragment.py  listbox.py  monitored_list.py  split_repr.py  treetools.py  util.py  vterm.py
dev-sketches/: fretboard-ascii.txt  readme.txt  testconfig.toml  urwid-interface-test.py
docs/: INSTALL.md  METHOD.md  birdears.docs.txt  birdears.interfaces.rst  birdears.questions.rst  birdears.rst  community.rst  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  src.birdears.interfaces.rst  src.birdears.questions.rst  src.birdears.rst  src.rst
docs/_modules/: index.html
docs/_static/: custom.css
docs/coverage-html/: birdears___init___py.html  birdears___main___py.html  birdears_click___init___py.html  birdears_click__bashcomplete_py.html  birdears_click__compat_py.html  birdears_click__termui_impl_py.html  birdears_click__textwrap_py.html  birdears_click__unicodefun_py.html  birdears_click__winconsole_py.html  birdears_click_core_py.html  birdears_click_decorators_py.html  birdears_click_exceptions_py.html  birdears_click_formatting_py.html  birdears_click_globals_py.html  birdears_click_parser_py.html  birdears_click_termui_py.html  birdears_click_testing_py.html  birdears_click_types_py.html  birdears_click_utils_py.html  birdears_exception_py.html  birdears_interfaces___init___py.html  birdears_interfaces_commandline_py.html  birdears_interfaces_gui___init___py.html  birdears_interfaces_gui_app_py.html  birdears_interfaces_urwid_py.html  birdears_interval_py.html  birdears_logger_py.html  birdears_note_and_pitch_py.html  birdears_prequestion_py.html  birdears_questionbase_py.html  birdears_questions___init___py.html  birdears_questions_harmonicinterval_py.html  birdears_questions_instrumentaldictation_py.html  birdears_questions_melodicdictation_py.html  birdears_questions_melodicinterval_py.html  birdears_questions_notename_py.html  birdears_resolution_py.html  birdears_scale_py.html  birdears_sequence_py.html  birdears_utils_py.html  (+2 more)
docs/keybindings/: advanced.json  dorian.json  ionian.json  keyboard-layout (1).json  keyboard-layout (2).json  keyboard-layout (3).json  keyboard-layout (4).json  keyboard-layout.json  locrian.json  lydian.json  minor.json  mixolydian.json  phrygian.json
docs/sphinx/: Makefile  birdears.interfaces.rst  birdears.rst  birdears.toml.rst  conf.py  (+8 more)
ex-birdears/: logger.py  prequestion.py  scale.py  utils.py
examples/: 000-CMajor-1st-to-4th.toml  001-CMajor-5st-to-8th.toml  002-CMajor-whole-octave.toml  003-CMajor-6th-to-7th.toml  004-CMajor-All-Diatonic.toml  005-CMajor-Two-Octaves.toml  006-CChromatic-1st-to-4th.toml  007-CChromatic-All.toml  008-Random-Major.toml  009-Random-Minor.toml
tests/: conftest.py  test_basic.py  test_first.py  test_harmonicinterval.py  test_instrumentaldictation.py  test_interfaces_commandline.py  test_interval.py  test_keyboard_indices.py  test_main.py  test_melodicdictation.py  test_melodicinterval.py  test_note_and_pitch.py  test_note_equality.py  test_notename.py  test_questionbase.py  test_questionbase_lazy.py  test_resolution_nearest_tonic.py  test_sequence_callback.py  test_sequence_chord_progression.py  test_sequence_optimization.py
(+208 files in other folders)
